--- a/learn/learn.css
+++ b/learn/learn.css
@@ -116,11 +116,39 @@
     transition: 0.2s ease;
 }
 
+#termList, #definitionList{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 50px;
+    max-width: 35%;
+    white-space: nowrap;
+}
+
+#terms, #definitions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 50px;
+    max-width: 35%;
+    list-style: decimal;
+}
+
+.tlist, .dlist{
+    white-space: normal;
+    margin: 20px 0;
+    padding: 10px;
+    text-overflow: ellipsis;
+    max-width: 50ch;
+    max-height: 200px;
+    word-wrap: break-word;
+}
 
 #addEditRemove{
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     align-items: center;
     justify-content: space-evenly;
-
 }
